shop fragment layout ready

--- a/app/src/main/res/layout/fragment_shop.xml
+++ b/app/src/main/res/layout/fragment_shop.xml
@@ -3,11 +3,124 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <TextView
+    <RelativeLayout
+        android:id="@+id/relativelayout_avatar"
         android:layout_height="wrap_content"
-        android:layout_width="wrap_content"
-        android:text="it is fragment shop"
-        android:textSize="20sp">
-    </TextView>
+        android:layout_width="match_parent"
+        android:layout_alignParentTop="true"
+        android:layout_marginTop="20dp">
+        <ImageView
+            android:id="@+id/fragshop_avatar"
+            android:background="@drawable/defaultavatar"
+            android:layout_height="120dp"
+            android:layout_width="120dp"
+            android:layout_alignParentLeft="true"
+            android:layout_marginLeft="30dp">
+        </ImageView>
+        <TextView
+            android:id="@+id/fragshop_accountname_header"
+            android:layout_height="wrap_content"
+            android:layout_width="wrap_content"
+            android:layout_toRightOf="@+id/fragshop_avatar"
+            android:layout_alignTop="@+id/fragshop_avatar"
+            android:layout_marginTop="25dp"
+            android:layout_marginLeft="10dp"
+            android:text="用户名"
+            android:textSize="20sp">
+            </TextView>
+        <TextView
+            android:id="@+id/fragshop_accountname"
+            android:layout_height="wrap_content"
+            android:layout_width="wrap_content"
+            android:layout_toRightOf="@+id/fragshop_accountname_header"
+            android:layout_alignTop="@+id/fragshop_accountname_header"
+            android:layout_marginLeft="8dp"
+            android:text="@string/default_placeholder"
+            android:textSize="20sp">
+            </TextView>
+        <TextView
+            android:id="@+id/fragshop_shopname_header"
+            android:layout_height="wrap_content"
+            android:layout_width="wrap_content"
+            android:layout_toRightOf="@+id/fragshop_avatar"
+            android:layout_alignBottom="@+id/fragshop_avatar"
+            android:layout_marginBottom="25dp"
+            android:layout_marginLeft="10dp"
+            android:text="店铺名"
+            android:textSize="20sp">
+        </TextView>
+        <TextView
+            android:id="@+id/fragshop_shopname"
+            android:layout_height="wrap_content"
+            android:layout_width="wrap_content"
+            android:layout_toRightOf="@+id/fragshop_shopname_header"
+            android:layout_alignTop="@+id/fragshop_shopname_header"
+            android:layout_marginLeft="8dp"
+            android:text="@string/default_placeholder"
+            android:textSize="20sp">
+        </TextView>
+    </RelativeLayout>
+
+    <ListView
+        android:id="@+id/fragshop_function_list"
+        android:layout_height="120dp"
+        android:layout_width="match_parent"
+        android:layout_below="@+id/relativelayout_avatar"
+        android:layout_marginTop="20dp"
+        android:layout_marginLeft="30dp"
+        android:layout_marginRight="30dp">
+    </ListView>
+
+    <RelativeLayout
+        android:id="@+id/fragshop_buttons"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:layout_marginLeft="30dp"
+        android:layout_marginRight="30dp"
+        android:layout_below="@+id/fragshop_function_list">
+
+        <ImageView
+            android:id="@+id/fragshop_menu_manage"
+            android:layout_height="100dp"
+            android:layout_width="100dp"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentTop="true"
+            android:layout_marginLeft="20dp"
+            android:layout_marginTop="5dp"
+            android:background="@drawable/defaultavatar">
+            </ImageView>
+        <ImageView
+            android:id="@+id/fragshop_express_manage"
+            android:layout_height="100dp"
+            android:layout_width="100dp"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentTop="true"
+            android:layout_marginRight="20dp"
+            android:layout_marginTop="5dp"
+            android:background="@drawable/defaultavatar">
+        </ImageView>
+        <ImageView
+            android:id="@+id/fragshop_sale_manage"
+            android:layout_height="100dp"
+            android:layout_width="100dp"
+            android:layout_below="@+id/fragshop_menu_manage"
+            android:layout_alignParentLeft="true"
+            android:layout_marginLeft="20dp"
+            android:layout_marginTop="5dp"
+            android:background="@drawable/defaultavatar">
+        </ImageView>
+        <ImageView
+            android:id="@+id/fragshop_notification_push"
+            android:layout_height="100dp"
+            android:layout_width="100dp"
+            android:layout_below="@+id/fragshop_express_manage"
+            android:layout_alignParentRight="true"
+            android:layout_marginRight="20dp"
+            android:layout_marginBottom="5dp"
+            android:background="@drawable/defaultavatar">
+        </ImageView>
+
+        </RelativeLayout>
 
 </RelativeLayout>
