add unsolved page's top bar first step

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,4 +3,6 @@
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="bottombar_cell_width">36dp</dimen>
+    <dimen name="unsolvedbar_cell_width">36dp</dimen>
+    <dimen name="unsolvedbar_cell_comments_width">65dp</dimen>
 </resources>
