add solved bar fitst step

--- a/app/src/main/res/layout/fragment_solved.xml
+++ b/app/src/main/res/layout/fragment_solved.xml
@@ -3,11 +3,17 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <TextView
-        android:layout_height="wrap_content"
-        android:layout_width="wrap_content"
-        android:text="it is fragment solved"
-        android:textSize="20sp">
-    </TextView>
+    <qishipeng.ipizza.CustomWidgets.SolvedBar
+        android:id="@+id/solved_bar"
+        android:layout_alignParentTop="true"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
+    <FrameLayout
+        android:id="@+id/solved_content"
+        android:layout_width="match_parent"
+        android:layout_below="@+id/unsolved_bar"
+        android:layout_alignParentTop="true"
+        android:layout_height="wrap_content">
+    </FrameLayout>
 
 </RelativeLayout>
